<resources>
    <string name="app_name">NearMe</string>
    <string name="sorry">Sorry! </string>
    <string name="no_funcationality">Functinality is not available yet</string>
    <string name="message"> is not available at the movement</string>
    <string name="zipcode_hint">Enter Zipcode</string>
    <string name="resturant_label">Resturant</string>
    <string name="atm_label">ATM</string>
    <string name="cafe_label">Cafe</string>
    <string name="fitness_label">Fitness</string>
    <string name="gas_label">Gas Station</string>
    <string name="mall_label">Shopping</string>
    <string name="parking_label">Parking</string>
    <string name="movie_label">Movies</string>
    <string name="pharmacy_label">Pharmacy</string>
    <string name="call_label">Call</string>
    <string name="web_label">Website</string>
    <string name="map_label">Map</string>
    <string name="search_type_label">select Search Type</string>
    <string name="open_label">Open Now</string>
    <string name="close_label">Close Now</string>
    <string name="menu_option_en">English</string>
    <string name="menu_option_ar">عربى</string>
    <string name="phone_err_msg">Error Connecting to phone number! Please try later</string>
    <string name="web_err_msg">Error Connecting to website! Please try later </string>
    <string name="map_err_msg">Error Connecting to map! Please try later</string>
    <string name="welcome_msg">Welcome! Find near by locations</string>
    <string name="review_label">Review and Ratings</string>
    <string name="more_label"> More</string>
    <string name="location_hint_with_location_service">Click button or enter Location</string>
    <string name="location_alert_title">Enable Location</string>
    <string name="location_alert_message">Would you like to enable location permission?</string>
    <string name="select_location_alert_title">Select Location</string>
    <string name="select_location_alert_message">Please select location to proceed..</string>
    <string name="connection_issue_msg">Connection issue! please try after some time.</string>
    <string name="no_result_msg">No Result! Looks you are in remote location, change your location and search again</string>
    <string name="limit_reached_msg">Connection issue! We are constantly working to make your experience better</string>
    <string name="no_internet_msg">Internet not connected! Please connect and try again</string>




</resources>
