<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_id"
        layout="@layout/toolbar_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_150dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/span_20dp"
            android:textColor="@color/cardBackgroundDark"
            android:text="@string/welcome_msg" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/span_30dp"
            android:layout_marginStart="@dimen/span_30dp"
            android:layout_marginTop="@dimen/span_20dp"
            android:background="@drawable/edit_text_background"
            android:drawableRight="@drawable/location"
            android:paddingHorizontal="@dimen/span_10dp"
            android:paddingVertical="@dimen/span_5dp" />


    </LinearLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/cardBackgroundDark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            style="@style/card_style"
            card_view:cardCornerRadius="@dimen/card_album_radius">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="3"
                android:columnOrderPreserved="true"
                android:orientation="horizontal"
                android:rowCount="3"
                android:useDefaultMargins="true">

                <LinearLayout
                    android:id="@+id/resturant_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/resturant" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/resturant_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/atm_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/atm" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/atm_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gas_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/gas" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/gas_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cafe_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/cafe" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/cafe_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mall_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/mall" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/mall_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fitness_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/fitness" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/fitness_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pharmacy_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/pharmacy" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/pharmacy_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/parking_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/parking" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/parking_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/movies_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/movies" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/movie_label" />

                </LinearLayout>

            </GridLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

