<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackgroundDark"
    android:orientation="vertical"
    tools:context="location.saif.com.nearme.NearMe">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        style="@style/card_style"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/span_10dp">

            <ImageView
                android:id="@+id/detail_photos"
                android:layout_width="150dp"
                android:layout_height="150dp" />

            <RatingBar
                android:id="@+id/detail_ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/detail_photos"
                android:layout_marginVertical="@dimen/span_5dp"
                android:numStars="5"
                android:rating="2" />

            <TextView
                android:id="@+id/detail_name"
                style="@style/title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/span_10dp"
                android:layout_marginTop="@dimen/span_20dp"
                android:layout_toEndOf="@id/detail_photos"
                tools:text="saifuddin" />

            <TextView
                android:id="@+id/detail_address"
                style="@style/sub_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_name"
                android:layout_marginStart="@dimen/span_10dp"
                android:layout_marginTop="@dimen/span_20dp"
                android:layout_toEndOf="@id/detail_photos"
                tools:text="address" />

            <View
                android:id="@+id/divider1"
                style="@style/divider_style"
                android:layout_below="@id/detail_ratingBar" />


            <TextView
                android:id="@+id/detail_is_working"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/span_10dp"
                android:text="@string/open_label"
                android:textColor="@color/open_text_color"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider2"
                style="@style/divider_style"
                android:layout_below="@id/detail_is_working" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider2"
                android:columnCount="3"
                android:columnOrderPreserved="true"
                android:orientation="horizontal"
                android:rowCount="1"
                android:useDefaultMargins="true">

                <LinearLayout
                    android:id="@+id/call_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/call" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/call_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/map_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/map" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/map_label" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/web_layout"
                    style="@style/grid_element_container_style">

                    <ImageView
                        style="@style/grid_element_image_style"
                        android:src="@drawable/web" />

                    <TextView
                        style="@style/grid_element_title_style"
                        android:text="@string/web_label" />

                </LinearLayout>
            </GridLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
